--- a/what：互联网医院生态.html
+++ b/what：互联网医院生态.html
@@ -100,6 +100,9 @@
       <!-- Unnamed (矩形) -->
       <div id="u188" class="ax_default box_2">
         <img id="u188_img" class="img " src="images/what：互联网医院生态/u182.png"/>
+        <div id="u188_text" class="text ">
+          <p><span>在初显成效</span></p>
+        </div>
       </div>
     </div>
   </body>
