https://15371334136.github.io/pro/#g=1&p=市场产品https://15371334136.github.io/pro/#g=1&p=市场产品
https://15371334136.github.io/pro/#g=1&p=市场产品

--- a/合作伙伴.html
+++ b/合作伙伴.html
@@ -88,7 +88,7 @@
       <div id="u198" class="ax_default box_2">
         <div id="u198_div" class=""></div>
         <div id="u198_text" class="text ">
-          <p><span>金浦健服投资的200+民营医院</span></p>
+          <p><span>金浦健服投资200+民营医院</span></p>
         </div>
       </div>
 
